--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
 </head>
 
 <body>
+    <div class="bg-light">
+        <nav class="flex container ">
+            <div class="border col-1-6 txt-sx pad">
+                <p>logo</p>
+            </div>
+            <div class="border col-4-6 txt-center pad">
+                <a href="#">link</a>
+                <a href="#">link</a>
+                <a href="#">link</a>
+                <a href="#">link</a>
+                <a href="#">link</a>
+            </div>
+            <div class="border col-1-6 txt-dx pad">
+                <p>login</p>
+            </div>
+        </nav>
+
+    </div>
+
+
+
 
 </body>
 
