--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 
     </div>
 
+    <div class="bg-blue flex center">
+        <div class="bg-violet container col-1-6 ">
+
+        </div>
+    </div>
 
 
 
