--- a/index.html
+++ b/index.html
@@ -9,31 +9,40 @@
 </head>
 
 <body>
+    <!-- Intestazione -->
     <div class="bg-light">
         <nav class="flex container ">
-            <div class="border col-1-6 txt-sx pad">
+            <div class="border col-1-6 txt-sx ">
                 <p>logo</p>
             </div>
-            <div class="border col-4-6 txt-center pad">
+            <div class="border col-4-6 txt-center pad-s">
                 <a href="#">link</a>
                 <a href="#">link</a>
                 <a href="#">link</a>
                 <a href="#">link</a>
                 <a href="#">link</a>
             </div>
-            <div class="border col-1-6 txt-dx pad">
+            <div class="border col-1-6 txt-dx ">
                 <p>login</p>
             </div>
         </nav>
 
+        <!-- First Row -->
     </div>
 
     <div class="bg-blue flex center">
-        <div class="bg-violet container col-5-6">
+        <div class="bg-violet container col-5-6 border">
 
         </div>
     </div>
 
+    <!-- Second Row -->
+    </div>
+
+    <div class="flex center container pad-m">
+        <div class="bg-sky  col-2-3 border"></div>
+        <div class="bg-pink  col-1-3 border"></div>
+    </div>
 
 
 </body>
