--- a/index.html
+++ b/index.html
@@ -36,13 +36,26 @@
         </div>
     </div>
 
+
     <!-- Second Row -->
-    </div>
 
     <div class="flex center container pad-m">
         <div class="bg-sky  col-2-3 border"></div>
         <div class="bg-pink  col-1-3 border"></div>
     </div>
+
+
+
+    <!-- Third Row -->
+    <div class="bg-grey">
+        <div class="flex center container pad-m">
+            <div class="bg-pink  col-1-3 border"></div>
+            <div class="bg-sky  col-2-3 border"></div>
+        </div>
+    </div>
+
+
+
 
 
 </body>
