--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
         </div>
     </div>
 
+    <!-- Fourth Row -->
 
+    <div class="flex center container pad-m">
+        <div class="bg-sky  col-2-3 border"></div>
+        <div class="bg-pink  col-1-3 border"></div>
+    </div>
 
 
 
