--- a/index.html
+++ b/index.html
@@ -26,16 +26,14 @@
                 <p>login</p>
             </div>
         </nav>
-
-        <!-- First Row -->
     </div>
 
+    <!-- First Row -->
     <div class="bg-blue flex center">
         <div class="bg-violet container col-5-6 border">
 
         </div>
     </div>
-
 
     <!-- Second Row -->
 
@@ -43,8 +41,6 @@
         <div class="bg-sky  col-2-3 border"></div>
         <div class="bg-pink  col-1-3 border"></div>
     </div>
-
-
 
     <!-- Third Row -->
     <div class="bg-grey">
@@ -67,6 +63,19 @@
             <div class="bg-green container border"></div>
         </div>
     </div>
+
+    <!-- Sixth Row -->
+    <div class="bg-black">
+        <div class="flex center container pad-m">
+            <div class="bg-salmon col-1-3- border"></div>
+            <div class="bg-turq col-1-6 w-border"></div>
+            <div class="bg-turq col-1-6 w-border"></div>
+            <div class="bg-turq col-1-6 w-border"></div>
+            <div class="bg-turq col-1-6 w-border"></div>
+        </div>
+    </div>
+
+
 
 
 </body>
