--- a/index.html
+++ b/index.html
@@ -75,7 +75,13 @@
         </div>
     </div>
 
-
+    <!-- Footer -->
+    <footer class="bg-black">
+        <div class="container flex bg-aqua test pad-s">
+            <p class="border bg-rose">Logo</p>
+            <p class="border bg-rose">Bottone</p>
+        </div>
+    </footer>
 
 
 </body>
